# basic_openclgl_sharing

./: CMakeLists.txt  README.md  gl_kernel.cl  main.cpp  main_glfw3.cpp  main_sdl2.cpp  simple.cpp
